DERBY-6856: Clean up the last deprecation warning introduced by build 118 of JDK 9: commit derby-6856-07-aa-oneMoreNewInstance.diff.
git-svn-id: https://svn.apache.org/repos/asf/db/derby/code/trunk@1746132 13f79535-47bb-0310-9956-ffa450edef68